# swintransformer-onnxruntime

./: .gitignore  README.md
cpu/: CMakeLists.txt  demo.cpp
gpu/: CMakeLists.txt  demo.cpp
